# tsunami_simulation

./: .gitignore  Cargo.toml  README.md  app.py  generate_sample_data.py  map.txt  map_kecil.txt  requirements.txt  run_with_sample_data.sh  visualization_app.py
data/: a.dbf  a.shp  a.shx  polygon_jalan.asc  polygon_jalan.asc.aux.xml  polygon_jalan.dbf  polygon_jalan.qmd  polygon_jalan.shp  polygon_jalan.shx  polygon_jalan_big.asc  polygon_jalan_big.asc.aux.xml
examples/: custom_simulation.rs
src/: api.rs  lib.rs  main.rs  tests.rs
src/game/: agent.rs  camera.rs  game.rs  grid.rs  mod.rs
static/css/: styles.css
static/js/: visualization.js
templates/: index.html  simple_visualization.html  visualization.html
