[package]
name = "tsunami_simulation"
version = "0.1.1"
edition = "2021"
authors = ["fabhianto.maoludyo@gmail.com"]
description = "A tsunami evacuation simulation library"
license = "MIT"
repository = "https://github.com/fabhiansan/tsunami_simulation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
rand = { version = "0.8", features = ["std"] }

[lib]
name = "tsunami_simulation"
path = "src/lib.rs"

[[bin]]
name = "tsunami_simulation"
path = "src/bin/tsunami_simulation.rs"

