[package]
name = "tsunami_simulation"
version = "0.1.1"
edition = "2021"
authors = ["fabhianto.maoludyo@gmail.com"]
description = "A tsunami evacuation simulation library with customizable agent-based modeling"
license = "MIT"
repository = "https://github.com/fabhiansan/tsunami_simulation"
keywords = ["tsunami", "simulation", "agent-based", "evacuation", "modeling"]
categories = ["simulation", "science"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
rand = { version = "0.8", features = ["std"] }

[lib]
name = "tsunami_simulation"
path = "src/lib.rs"

[[bin]]
name = "tsunami_simulation"
path = "src/bin/tsunami_simulation.rs"

[[example]]
name = "custom_simulation"
path = "examples/custom_simulation.rs"

