[package]
name = "tsunami_simulation"
version = "0.1.1"
edition = "2021"
authors = ["fabhianto.maoludyo@gmail.com"]
description = "A tsunami evacuation simulation library with customizable agent-based modeling"
license = "MIT"
repository = "https://github.com/fabhiansan/tsunami_simulation"
keywords = ["tsunami", "simulation", "agent-based", "evacuation", "modeling"]
categories = ["simulation", "science"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
rand = { version = "0.8", features = ["std"] }
# Added dependencies for API backend
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
env_logger = "0.11.3"
grid = "0.16.0"

[lib]
name = "tsunami_simulation"
path = "src/lib.rs"

[[bin]]
name = "tsunami_simulation"
path = "src/bin/tsunami_simulation.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[example]]
name = "custom_simulation"
path = "examples/custom_simulation.rs"
